# django-kihara

./: README.md  pyproject.toml
event/: admin.py  models.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_createdate_date.py  0002_eventconfig_delete_event.py  0002_eventconfig_memo.py  0002_rename_time_date_time1_date_time2.py  0003_alter_eventconfig_memo.py  0003_rename_createdate_createddate.py  0003_rename_question_text_eventconfig_name_and_more.py  0004_alter_createddate_created_at_alter_date_date.py  0005_rename_date_date_day.py  0006_alter_date_day.py  0007_alter_eventconfig_memo.py  0008_alter_eventconfig_memo.py
event/static/event/: kiyaku.css  list_style.css  shousai.css  style.css
event/templates/event/: detail.html  form.html  index.html  kiyaku.html  list.html  shousai.html
event/templet/event/: form.html  list.html
mysite/: settings.py  urls.py
mysite/mysite/: settings.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
suntory/: apps.py  models.py  urls.py  views.py
suntory/migrations/: 0001_initial.py  0002_santori_aruaru_santori_daijobu_santori_ganba.py
suntory/templates/サントリアル/: index.html  index2.html  index3.html  index4.html  java.js  java2.js  java3.js  java4.js  style.css  style2.css  style3.css  style4.css
todo1/: models.py  urls.py  views.py
todo1/migrations/: 0001_initial.py
todo1/templates/todo1/: list.html
todo2/: apps.py  urls.py  views.py
